# undulator-analysis-hzb

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_templates/: custom_module_template.rst
sandbox/: UE51_Sandbox.py  campaign_sandbox.py  device_sandbox.py  field_analysis_sandbox.py  in_out_sandbox.py
src/undulator_analysis_hzb/: campaign.py  data_io.py  demo1.py  field_analysis.py  measurement.py  measurement_system.py  sandbox.py  track.py
tests/: .gitignore  test_campaign.py  test_data_io.py  test_demo1.py  test_measurement.py  test_track.py
tests/08.02.2022/complete_map/: MAG601.DVM  MAG605.DVM  MAG606.DVM  MAG607.DVM  MAG609.DVM  MAG611.DVM  MAG614.DVM  MAG618.DVM  MAG624.DVM  MAG625.DVM  MAG627.DVM  MAG629.DVM  MAG631.DVM  compare_runs.m  mult10by.cal  mult10by.p11  mult10by.res  mult10by.sii  mult10by.spi  mult10bz.dvm  mult10bz.fli  mult10bz.flt  mult10bz.out  mult10bz.p11  mult10bz.sii  mult11by.cal  mult11by.err  mult11by.fli  mult11by.p10  mult11by.pha  mult11by.sii  mult11by.tru  mult11bz.dvm  mult11bz.err  mult11bz.p10  mult11bz.pha  mult11bz.res  mult11bz.sii  mult11bz.spi  mult11bz.spl  (+392 more)
tests/08.02.2022/phase_error_results/: mult14bz.pha  mult28by.pha  mult_m28by.pha
tests/08.02.2022/shift_minus_14/: analyze_central_trajectory_phase_error.m  analyze_first_field_int.m  mult1by.cal  mult1by.dvm  mult1by.err  mult1by.flt  mult1by.p10  mult1by.res  mult1by.sii  mult1by.spi  mult1bz.dvm  (+6 more)
tests/resources/: MAG1221.DVM  MAG1222.DVM  MAG1223.DVM
(+694 files in other folders)
