[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "undulator-analysis-hzb"
version = "0.0.1"
authors = [
  { name="E. Rial", email="ed.rial@helmholtz-berlin.de" },
]
description = "A package that analyses hall probe measurement data to produce meaningful field maps and particle trajectories"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
